--- a/src/containers/careerNew/components/Landing/landing.scss
+++ b/src/containers/careerNew/components/Landing/landing.scss
@@ -92,7 +92,7 @@
         background: #fff;
         border-top: none;
         border-left: none;
-        border-right: none;f
+        border-right: none;
 
         &:hover{
             color: #9C7D50;
@@ -149,6 +149,12 @@
         margin-top: 30px;
         border: none;
         margin-bottom: 100px;
+
+        &:hover{
+            color: #4C4C4C;
+            background: #FFFFFF00 0% 0% no-repeat padding-box;
+            border: 1px solid #4C4C4C;
+        }
 
         @media screen and (max-width: 767px) {
             margin-bottom: 50px;
