Mobile breadcrumbs remove and unavailale size hover state border

--- a/src/components/SizeSelector/styles.scss
+++ b/src/components/SizeSelector/styles.scss
@@ -41,7 +41,7 @@
       background: linear-gradient(to left top, #f9f8f5 47.75%, currentColor 50.5%, currentColor 49.5%, #f9f8f5 51.25%);
       &:hover {
         // background-color: tint(#000,95%);
-        border: #E5E5E5;
+        // border: #E5E5E5;
         border-style: solid;
         border-width: 1px;
       }
