--- a/src/containers/careerNew/components/Listing/listing.scss
+++ b/src/containers/careerNew/components/Listing/listing.scss
@@ -3,7 +3,6 @@
 
 .career_list_main_wrp{
     margin-top: 80px;
-    background: #f9f8f5;
 
     .career_list_wrp{
         display: flex;
@@ -16,8 +15,9 @@
             position: -webkit-sticky;
             top: 80px;
             align-self: flex-start;
-            background: #FFFFFF 0% 0% no-repeat padding-box;
+            background: $white 0% 0% no-repeat padding-box;
             box-shadow: 0px 3px 6px #00000029;
+            min-height: 60vh;
 
     
             .filter_li{
@@ -25,9 +25,9 @@
         
                     .filter_label{
                         text-align: center;
-                        font: normal normal normal 12px/20px Montserrat;
+                        font: normal normal normal 12px/20px $font-Montserrat;
                         letter-spacing: 0.36px;
-                        color: #191919;
+                        color: $charcoal19;
                         text-transform: uppercase;
                         opacity: 1;
                         cursor: pointer;
@@ -35,7 +35,7 @@
                         &:after {
                             content: '';
                             float: right;
-                            border: solid #191919;
+                            border: solid $charcoal19;
                             border-width: 0 1px 1px 0;
                             width: 8px;
                             height: 8px;
@@ -48,9 +48,9 @@
                     }
                     .filter_applied{
                         text-align: center;
-                        font: normal normal normal 12px/20px Montserrat;
+                        font: normal normal normal 12px/20px $font-Montserrat;
                         letter-spacing: 0.36px;
-                        color: #191919;
+                        color: $charcoal19;
                         text-transform: uppercase;
                         opacity: 1;
                         cursor: pointer;
@@ -71,16 +71,16 @@
                     }
                     .filter_label_open {
                         text-align: center;
-                        font: normal normal normal 12px/20px Montserrat;
+                        font: normal normal normal 12px/20px $font-Montserrat;
                         letter-spacing: 0.36px;
-                        color: #191919;
+                        color: $charcoal19;
                         text-transform: uppercase;
                         opacity: 1;
                         cursor: pointer;
                         &:after {
                           content: '';
                           float: right;
-                          border: solid #191919;
+                          border: solid $charcoal19;
                           border-width: 0 1px 1px 0;
                           width: 8px;
                           height: 8px;
@@ -93,25 +93,20 @@
                     }
         
                     .filter_label_underline{
-                        border: 1px solid #f9f8f5;
+                        border: 1px solid $grey;
                     }
-            //     }
-            // }
         
             .filters_wrp{
                 padding:5px;
-        
-                // .ul{
-                //     .li{
     
                     [type="checkbox"]:checked + label,
                      [type="checkbox"]:not(:checked) + label{
                             position: relative;
                             cursor: pointer;
                             text-align: left;
-                            font: normal normal normal 12px/20px Montserrat;
+                            font: normal normal normal 12px/20px $font-Montserrat;
                             letter-spacing: 0.36px;
-                            color: #191919;
+                            color: $charcoal19;
                             opacity: 1;
                             padding-left: 30px;
                             width: 100%;
@@ -130,7 +125,7 @@
                           [type="checkbox"]:checked + label:before {
                             content: '';
                             position: absolute;
-                            background-color: #7EAAA9;
+                            background-color: $aquablue;
                             width: 18px;
                             height: 18px;
                             border: 1px #dbd4d4 solid;
@@ -154,22 +149,22 @@
                     
                         .see_more_btn{
                             text-align: center;
-                            font: normal normal normal 10px/16px Montserrat;
+                            font: normal normal normal 10px/16px $font-Montserrat;
                             letter-spacing: 0.36px;
-                            color: #191919;
+                            color: $charcoal19;
                             text-transform: uppercase;
-                            border-bottom: 1px solid #191919;
+                            border-bottom: 1px solid $charcoal19;
                             padding-bottom: 1px;
                             opacity: 1;
-                            background: #fff;
+                            background: $white;
                             border-top: none;
                             border-left: none;
                             border-right: none;
                             margin-top: 12px;
                     
                             &:hover{
-                                color: #3C7979;
-                                border-bottom: 1px solid #3C7979;
+                                color: $aquablue;
+                                border-bottom: 1px solid $aquablue;
                             }
                         }
         
@@ -178,15 +173,15 @@
                         flex-wrap: wrap;
         
                         .filter_tag{
-                            background: #F2F2F2 0% 0% no-repeat padding-box;
+                            background: $disabled-input 0% 0% no-repeat padding-box;
                             border-radius: 13px;
                             opacity: 1;
                             border-width: 1%;
                             width: max-content;
                             text-align: left;
-                            font: normal normal normal 9px/30px Montserrat;
+                            font: normal normal normal 9px/30px $font-Montserrat;
                             letter-spacing: 0.54px;
-                            color: #4C4C4C;
+                            color: $formLabel;
                             opacity: 1;
                             padding: 0px 14px;
                             margin: 4px;
@@ -195,17 +190,14 @@
                                 float: right;
                                 opacity: 1;
                                 padding-left: 15px;
-                                font: normal normal normal 14px/30px Montserrat;
+                                font: normal normal normal 14px/30px $font-Montserrat;
                                 cursor: pointer;
                             }
         
         
                             
                         }
-                    }
-                //     }
-                // }
-        
+                    }        
             }
             .filters_wrp_hide{
                 display: none;
@@ -218,9 +210,9 @@
 
             @media screen and (max-width: 767px) {
                 position: fixed;
-                transform: translateY(100%);
+                transform: translateY(300%);
                 transition: all 0.3s ease-in;
-                /* top: 0; */
+                top: 0; 
             }
         }
 
@@ -228,6 +220,7 @@
            
 
             .show{
+                position: relative;
                 display: block;
                 width: 100%;
                 padding: 24px;
@@ -253,9 +246,9 @@
             
             .opportunities_count{
                 text-align: left;
-                font: normal normal 300 12px/19px Montserrat;
+                font: normal normal 300 12px/19px $font-Montserrat;
                 letter-spacing: 0.36px;
-                color: #191919;
+                color: $charcoal19;
                 opacity: 1;
             }
 
@@ -267,24 +260,28 @@
                     margin: 20px;
                 }
 
+                @media screen and (max-width: 992px)  and (min-width:768px){
+                    margin: 100px;
+                }
+
                 .no_resords_heading{
-                    font: normal normal normal 20px/25px Lora;
+                    font: normal normal normal 20px/25px $font-Lora;
                     letter-spacing: 0.4px;
-                    color: #191919;
+                    color: $charcoal19;
                     opacity: 1;
                     margin-bottom: 15px;
                 }
 
                 .no_resords_desc{
                     opacity: 1;
-                    font: normal normal normal 12px/20px Montserrat;
+                    font: normal normal normal 12px/20px $font-Montserrat;
                     letter-spacing: 0.36px;
-                    color: #191919;
+                    color: $charcoal19;
                     width:35%;
                     margin: auto;
 
-                    @media screen and (max-width: 767px) {
-                        width:50%;
+                    @media screen and (max-width: 992px) {
+                        width:100%;
                     }
                 }
 
@@ -293,28 +290,28 @@
                     background: #4C4C4C 0% 0% no-repeat padding-box;
                     opacity: 1;
                     text-align: center;
-                    font: normal normal normal 14px/30px Montserrat;
+                    font: normal normal normal 14px/30px $font-Montserrat;
                     letter-spacing: 0.42px;
-                    color: #FFFFFF;
+                    color: $white;
                     text-transform: uppercase;
                     width: 40%;
                     padding: 6px 0px;
                     margin-top: 30px;
 
                     &:hover{
-                        color: #4C4C4C;
+                        color: $lgtDefault;
                         background: #FFFFFF00 0% 0% no-repeat padding-box;
-                        border: 1px solid #4C4C4C;
+                        border: 1px solid $lgtDefault;
                     }
 
-                    @media screen and (max-width: 767px) {
-                        width:60%;
+                    @media screen and (max-width: 992px) {
+                        width:80%;
                     }
                 }
             }
     
             .job_card_wrp{
-                background: #F9F8F5 0% 0% no-repeat padding-box;
+                background: $grey 0% 0% no-repeat padding-box;
                 opacity: 1;
                 padding: 30px;
                 margin: 10px 0px;
@@ -333,48 +330,47 @@
 
                     .job_card_heading{
                         text-align: left;
-                        font: normal normal normal 20px/25px Lora;
+                        font: normal normal normal 20px/25px $font-Lora;
                         letter-spacing: 0.4px;
-                        color: #191919;
+                        color: $charcoal19;
                         opacity: 1;
                     }
 
                     .job_card_location{
                         text-align: left;
-                        font: normal normal normal 12px/20px Montserrat;
+                        font: normal normal normal 12px/20px $font-Montserrat;
                         letter-spacing: 0.36px;
-                        color: #191919;
+                        color: $charcoal19;
                         opacity: 1;
                         padding: 20px 0px;
                     }
         
                     .job_card_desc{
                         text-align: left;
-                        font: normal normal 300 12px/19px Montserrat;
+                        font: normal normal 300 12px/19px $font-Montserrat;
                         letter-spacing: 0.36px;
-                        color: #191919;
+                        color: $charcoal19;
                         opacity: 1;
                         width: 90%;
                     }
         
                     .job_card_apply_btn{
-                        border: 1px solid var(--med-charcoal-4c4c4c);
                         background: #FFFFFF00 0% 0% no-repeat padding-box;
-                        border: 1px solid #4C4C4C;
+                        border: 1px solid $lgtDefault;
                         opacity: 1;
                         text-align: center;
-                        font: normal normal normal 14px/30px Montserrat;
+                        font: normal normal normal 14px/30px $font-Montserrat;
                         letter-spacing: 0.42px;
-                        color: #4C4C4C;
+                        color: $lgtDefault;
                         text-transform: uppercase;
                         opacity: 1;
                         padding: 6px 12px;
                         margin: 20px 0px;
         
                         &:hover{
-                            color: #3C7979;
+                            color: $aquablue;
                             background: #FFFFFF00 0% 0% no-repeat padding-box;
-                            border: 1px solid #91B0B0;
+                            border: 1px solid $aquablue;
                             opacity: 1;
                         }
                     }
@@ -387,10 +383,14 @@
                        padding-top: 20px;
                        width: 100%;
                     }
+
+                    @media screen and (min-width: 768px) and (max-width:1024px) {
+                        width: 30%;
+                     }
                    
                     .job_card_share_heading{
                         text-align: right;
-                        font: normal normal normal 12px/20px Montserrat;
+                        font: normal normal normal 12px/20px $font-Montserrat;
                         letter-spacing: 0.36px;
                         color: #191919;
                         text-transform: uppercase;
@@ -429,13 +429,13 @@
             transition: bottom 0.3s;
             padding: 10px 25px;
             width: 100%;
-            background: #FFFFFF 0% 0% no-repeat padding-box;
+            background: $white 0% 0% no-repeat padding-box;
             box-shadow: 0px -2px 6px #00000029;
             opacity: 1;
             text-align: left;
-            font: normal normal normal 12px/20px Montserrat;
+            font: normal normal normal 12px/20px $font-Montserrat;
             letter-spacing: 0.36px;
-            color: #191919;
+            color: $charcoal19;
             text-transform: uppercase;
            
 
@@ -447,11 +447,8 @@
                 width: 10px;
                 height: 10px;
                 transform: rotate(225deg);
-                /* top: 0px; */
                 position: absolute;
                 right: 50px;
-                /* left: 148px; */
-                /* bottom: 0px; */
                 margin-top: 8px;
                 cursor: pointer;
               }
@@ -468,13 +465,13 @@
             left: 0;
             align-self: flex-start;
             z-index: 5;
-            background-color: white;
+            background-color: $white;
             width: 100%;
             transition: bottom 0.3s;
 
             .cancel_btn{
                 text-align: center;
-                font: normal normal normal 14px/30px Montserrat;
+                font: normal normal normal 14px/30px $font-Montserrat;
                 letter-spacing: 0.42px;
                 color: #4C4C4C;
                 text-transform: uppercase;
@@ -489,9 +486,9 @@
                 background: #4C4C4C 0% 0% no-repeat padding-box;
                 opacity: 1;
                 text-align: center;
-                font: normal normal normal 14px/30px Montserrat;
+                font: normal normal normal 14px/30px $font-Montserrat;
                 letter-spacing: 0.42px;
-                color: #FFFFFF;
+                color: $white;
                 text-transform: uppercase;
                 width: 50%;
                 padding: 10px 0px;
