--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -239,6 +239,12 @@
         bottom: auto;
         position: absolute;
       }
+      &.edit-track-disabled{
+        cursor: not-allowed !important;
+        a:hover {
+            cursor: not-allowed !important;
+          }
+      }
       cursor: pointer;
       a:hover {
         cursor: pointer;
