--- a/src/components/SizeSelector/styles.scss
+++ b/src/components/SizeSelector/styles.scss
@@ -33,18 +33,18 @@
     // }
 
     &.unavailable {
-      color: #E5E5E5;
+      color: #E5E5E5 !important;
       // text-decoration: line-through;
       border: #E5E5E5;
       border-style: solid;
       border-width: 1px;
       background: linear-gradient(to left top, #f9f8f5 47.75%, currentColor 50.5%, currentColor 49.5%, #f9f8f5 51.25%);
-      &:hover {
-        // background-color: tint(#000,95%);
-        // border: #E5E5E5;
-        border-style: solid;
-        border-width: 1px;
-      }
+      // &:hover {
+      //   // background-color: tint(#000,95%);
+      //   // border: #E5E5E5;
+      //   border-style: solid;
+      //   border-width: 1px;
+      // }
     }
 
     &.selected {
