PDP accordion description

--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -1,9 +1,9 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/mixins";
 
-strong {
-    font-weight: bold;
-}
+// strong {
+//     font-weight: bold;
+// }
 
 .accordion-section {
     box-shadow: 0px 1px 0px lightgrey;
