--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -1,10 +1,6 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/mixins";
 
-// strong {
-//     font-weight: bold;
-// }
-
 .accordion-section {
     box-shadow: 0px 1px 0px lightgrey;
 }
@@ -23,6 +19,13 @@
     transition: max-height 0.3s ease-in;
     &.default-open{
       max-height: fit-content;
+    }
+    div{
+      p{
+        strong {
+          font-weight: 400;
+        }
+      }
     }
 }
 
