--- a/src/components/Zoom/styles.scss
+++ b/src/components/Zoom/styles.scss
@@ -4,6 +4,11 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none; 
+    -khtml-user-select: none;
+    -ms-user-select: none; 
 }
 
 .sidebar {
