--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -30,6 +30,7 @@ $pdp-top: $header-height + $secondary-header-height;
 }
 
 .product-image-container {
+    user-select: none;
     // padding-left: 40px;
     // margin-top: 40px;
     img {
