--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -5,7 +5,6 @@
     width: 100%;
     min-height: 360px;
     background-color: #fff;
-    bottom: 0;
     padding-bottom: 55px;
     position: relative;
 
@@ -17,7 +16,10 @@
         margin: 0 6px;
     }
     &.mobile{
-        position: absolute;
+        // position: absolute;
+        // top:0;
+        // position: fixed;
+        // top: -52px;
     }
 }
 
