--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -63,6 +63,7 @@
       padding: 20px 20px 20px 20px;
       justify-content: space-between;
       background-color: #4c4c4c;
+      margin-bottom: 15px;
   
       .heading {
         font-family: $font-Lato;
