--- a/src/components/Cushion/styles.scss
+++ b/src/components/Cushion/styles.scss
@@ -618,7 +618,7 @@
   line-height: 45px;
 }
 .widget-qty {
-  display: flex;
+  // display: flex;
   width: 100%;
   // margin-top: 10px;
   // min-width: 120px;
