Accordion arrow fix

--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -40,6 +40,8 @@
     }
 }
 
-.size-guide-accordion{
-    position:relative;
+.arrow {
+  @include carret();
+  position: absolute;
+  right: 20px;
 }
