--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -22,7 +22,7 @@ $disabled-input: #f2f2f2;
 $formLabel: #666;
 $light-grey: #A6A6A6;
 $very-light-grey: #EFEFEF;
-$gold: #9C7D50;
+$gold: #987E56;
 $aquablue: #8AB1B0;
 $charcoal19: #191919;
 
