--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,7 +12,6 @@ $font-Lora: "Lora";
 
 // Colors
 $light-bg: tint(#000, 95%);
-$cerise: #ab1e56;
 $white: #fff;
 $default: #000;
 $lgtDefault: #333333;
@@ -22,9 +21,7 @@ $disabled-input: #f2f2f2;
 $formLabel: #666;
 $light-grey: #A6A6A6;
 $very-light-grey: #EFEFEF;
-$gold: #987E56;
 $aquablue: #8AB1B0;
-$charcoal19: #191919;
 
 // Dropdown menu
 $dropdown-label-height: 32px;
@@ -40,3 +37,20 @@ $footer-top:0px;
 $header-checkout: 50px;
 $grid-view-bar: 50px;
 $timer-height: 40px;
+
+// ================= UI Kit Colors ============================ //
+// Primary Palette
+$cerise: #ab1e56;
+$gold: #9C7D50;
+$charcoal19: #191919;
+$light-beige: #F9F8F5;
+$med-charcoal: #4C4C4C;
+$light-charcoal: #9F9F9F;
+$lightest-charcoal: #D8D8D8;
+
+// Secondary Palette
+$aqua: #7EAAA9;
+$aqua-bold: #548B8B;
+$aqua-light: #D0E0E0;
+$cerise-light: #C6507F;
+$gold-light: #B59C77;
