--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -458,7 +458,7 @@
 }
 
 .lower-menu {
-  background-color: tint(#000, 90%);
+  background-color: $light-beige;
   padding: 25px 20px 20px 30px;
   position: relative;
   float: left;
@@ -473,11 +473,11 @@
     margin-bottom: 100px;
   }
   li {
-    @include menu-subcopy();
+    @include b4_12px_charcoal();
     text-transform: uppercase;
     line-height: 40px;
     a {
-      color: tint(#000, 20%);
+      color: $charcoal19;
     }
     > :nth-child(2) {
       padding-left: 20px;
@@ -1667,4 +1667,15 @@ ul.inner-menu-mobile {
       color: $cerise;
     }
   }
+}
+
+.lower-menu-selected-currency {
+  font-size: 10px !important;
+  color: $charcoal19 !important;
+  font-weight: bold !important;
+}
+
+.lower-menu-currency {
+  font-size: 10px !important;
+  color: $charcoal19 !important;
 }
