--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -712,7 +712,7 @@ $list: $grey 92%, $white 8%;
   font-family: $font-Montserrat;
   font-weight: 600;
   font-size: 10px;
-  color: #FFFFFF;
+  color: $white;
   letter-spacing: 0.60px;
 }
 
@@ -721,7 +721,7 @@ $list: $grey 92%, $white 8%;
   font-family: $font-Montserrat;
   font-weight: normal;
   font-size: 14px;
-  color: #191919;
+  color: $charcoal19;
   letter-spacing: 0.30px;
 }
 
@@ -730,7 +730,15 @@ $list: $grey 92%, $white 8%;
   font-family: $font-Montserrat;
   font-weight: normal;
   font-size: 10px;
-  color: #191919;
+  color: $charcoal19;
+  letter-spacing: 0.30px;
+}
+
+@mixin b4_12px_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  color: $charcoal19;
+  font-weight: normal;
   letter-spacing: 0.30px;
 }
 
@@ -746,7 +754,7 @@ $list: $grey 92%, $white 8%;
   font-family: $font-Montserrat;
   font-weight: normal;
   font-size: 12px;
-  color: #4C4C4C;
+  color: $med-charcoal;
   letter-spacing: 0.30px; 
 }
 
