--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -148,6 +148,36 @@
    
 }
 
+.price-section{
+    text-align: center;
+    margin: auto;
+    border: 1px solid #ccc;
+    width: 66%;
+    margin-top: -16px;
+    padding: 0px 20px;
+    margin-bottom: 30px;
+
+    @media screen and (max-width: 767px) {
+        width: 83%;
+    }
+
+    .sub-total-section{
+        display: flex;
+        justify-content: space-between;
+        font-weight: 600;
+        margin: 20px 0px;
+    }
+
+    .discount-section{
+        border-bottom: 1px solid #e6e6e6;
+        display: flex;
+        justify-content: space-between;
+        padding: 15px 0px;
+    }
+
+
+}
+
 @media screen and (min-width: 992px) {
 .os {
    
