Wishlist icon gold on wishlist page

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1679,3 +1679,7 @@ ul.inner-menu-mobile {
   font-size: 10px !important;
   color: $charcoal19 !important;
 }
+
+.wishlist-gold{
+  color: $gold !important;
+}
