--- a/src/components/header/templates/styles.scss
+++ b/src/components/header/templates/styles.scss
@@ -1,3 +1,6 @@
+@import "../../../styles/partials/variables";
+@import "../../../styles/partials/mixins";
+
 .l2l3 {
     margin-bottom: 25px;
     padding-left: 10%;
@@ -11,21 +14,15 @@
         border-bottom: none;
         // padding-left: 20px;
         line-height: 30px;
-        letter-spacing: .05em;
-        font-size: 12px;
-        font-weight: bold;
-        text-transform: uppercase;
-        color: #1b1b1b;
-        font-family: "LatoFont", "Helvetica", "Arial";
+        @include b4_12px_semibold_caps_charcoal();
     }
     .l3 {
-        font-size: 11px;
         text-transform: capitalize;
-        font-family: "LatoFont", "Helvetica", "Arial";
-        letter-spacing: 0.09em;
-        color: #1b1b1b;
-        border-bottom: none;
-        line-height: 20px;
+        @include b4_12px_charcoal();
+            &:hover{
+                font-weight: 600;
+                color: #000
+            }
     }
     .block-l2 {
         display: block;
@@ -49,11 +46,10 @@
         display: block;
         border-bottom: none;
         line-height: 18px;
-        letter-spacing: .05em;
-        font-size: 12px;
-        font-weight: normal;
-        color: #1b1b1b;
-        font-family: "LatoFont", "Helvetica", "Arial";
+        @include b4_12px_charcoal();
+        &:hover{
+            font-weight: 600;
+        }
     }
     .subheading {
         font-size: 11px;
@@ -93,11 +89,10 @@
         display: block;
         border-bottom: none;
         line-height: 18px;
-        letter-spacing: .05em;
-        font-size: 12px;
-        font-weight: normal;
-        color: #1b1b1b;
-        font-family: "LatoFont", "Helvetica", "Arial";
+        @include b4_12px_charcoal();
+        &:hover{
+            font-weight: 600;
+        }
     }
     .subheading {
         font-size: 11px;
@@ -136,11 +131,7 @@
         display: block;
         border-bottom: none;
         line-height: 18px;
-        letter-spacing: .05em;
-        font-size: 12px;
-        font-weight: normal;
-        color: #1b1b1b;
-        font-family: "LatoFont", "Helvetica", "Arial";
+        @include b4_12px_charcoal();
     }
     .subheading {
         font-size: 11px;
@@ -174,14 +165,8 @@
         display: block;
     }
     .title {
-        border-bottom: none;
         line-height: 30px;
-        letter-spacing: .05em;
-        font-size: 12px;
-        font-weight: bold;
-        text-transform: uppercase;
-        color: #000;
-        font-family: "LatoFont", "Helvetica", "Arial";
+        @include b4_12px_semibold_caps_charcoal();
     }
     .img {
         width: 50%;
@@ -199,12 +184,8 @@
         .heading {
             border-bottom: none;
             line-height: 18px;
-            letter-spacing: .05em;
             display: block;
-            font-size: 12px;
-            font-weight: normal;
-            color: #1b1b1b;
-            font-family: "LatoFont", "Helvetica", "Arial";
+            @include b4_12px_charcoal();
         }
         .subheading {
             font-size: 11px;
@@ -239,12 +220,7 @@
     .title {
         border-bottom: none;
         line-height: 30px;
-        letter-spacing: .05em;
-        font-size: 12px;
-        font-weight: bold;
-        text-transform: uppercase;
-        color: #000;
-        font-family: "LatoFont", "Helvetica", "Arial";
+        @include b4_12px_semibold_caps_charcoal();
     }
     .img {
         width: 40%;
@@ -263,12 +239,8 @@
             border-bottom: none;
             // padding-left: 20px;
             line-height: 18px;
-            letter-spacing: .05em;
             display: block;
-            font-size: 12px;
-            font-weight: bold;
-            color: #000;
-            font-family: "LatoFont", "Helvetica", "Arial";
+            @include b4_12px_charcoal();
         }
         .subheading {
             display: none;
@@ -290,13 +262,10 @@
     border-bottom: none;
     // padding-left: 20px;
     line-height: 30px;
-    letter-spacing: .05em;
-    display: block;
-    font-size: 12px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #1b1b1b;
-    font-family: "LatoFont", "Helvetica", "Arial";
+    @include b4_12px_semibold_caps_charcoal();
+    a {
+        color: $med-charcoal;
+    }
 }
 
 .cta {
@@ -328,11 +297,10 @@
     .heading {
         border-bottom: none;
         line-height: 30px;
-        letter-spacing: .05em;
-        font-size: 12px;
-        font-weight: normal;
-        color: #1b1b1b;
-        font-family: "LatoFont", "Helvetica", "Arial";
+        @include b4_12px_charcoal();
+        &:hover{
+            font-weight: 600;
+        }
     }
     .subheading {
         font-size: 11px;
@@ -389,12 +357,8 @@
             border-bottom: none;
             // padding-left: 20px;
             line-height: 18px;
-            letter-spacing: .05em;
             display: block;
-            font-size: 12px;
-            font-weight: bold;
-            color: #000;
-            font-family: "LatoFont", "Helvetica", "Arial";
+            @include b4_12px_charcoal();
         }
         .subheading {
             display: none;
