--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -750,6 +750,15 @@ $list: $grey 92%, $white 8%;
   letter-spacing: 0.30px;
 }
 
+@mixin b4_12px_semibold_caps_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  color: $med-charcoal;
+  font-weight: 600;
+  letter-spacing: 0.30px;
+  text-transform: uppercase;
+}
+
 @mixin b4_14px_CAPS_charcoal{
   font-family: $font-Montserrat;
   font-size: 14px;
