--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1687,6 +1687,10 @@ ul.inner-menu-mobile {
   color: $gold !important;
 }
 
+.cart-gold{
+  color: $gold !important;
+}
+
 // .lower-menu-login-logout {
 //   @include b3_14px_gold();
 // }
