--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -750,6 +750,15 @@ $list: $grey 92%, $white 8%;
   letter-spacing: 0.30px;
 }
 
+@mixin b4_12px_charcoal_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  color: $charcoal19;
+  font-weight: normal;
+  letter-spacing: 0.30px;
+  text-transform: uppercase;
+}
+
 @mixin b4_12px_semibold_caps_charcoal{
   font-family: $font-Montserrat;
   font-size: 12px;
@@ -788,6 +797,14 @@ $list: $grey 92%, $white 8%;
   font-weight: normal;
   font-size: 10px;
   color: $charcoal19;
+  letter-spacing: 0.30px;
+}
+
+@mixin b5_10px_white{
+  font-family: $font-Montserrat;
+  font-weight: 600;
+  font-size: 10px;
+  color: $white;
   letter-spacing: 0.30px;
 }
 
