--- a/src/components/weRecomend/slick.css
+++ b/src/components/weRecomend/slick.css
@@ -10,12 +10,12 @@
 }
 .we-recommend .slick-arrow{
   font-size: 30px;
-  background-color: #b3b3b3;
+  background-color: #E5E5E5;
   border-radius: 50%;
   padding: 5px;
   /*top: 35%;*/
 }
 
 .we-recommend .slick-arrow.slick-prev:hover, .we-recommend .slick-arrow.slick-next:hover {
-  background-color: #ab1e56;
+  background-color: #9F9F9F;
 }
