WE recommend and More from this collection section

--- a/src/components/moreCollection/slick.css
+++ b/src/components/moreCollection/slick.css
@@ -37,10 +37,10 @@
 }
 
 .more-collection .slick-slider:hover .slick-arrow.slick-next, .more-collection .slick-slider:hover .slick-arrow.slick-prev {
-  height: 70px;
+  height: 50px;
   width: 50px;
   background: rgba(0, 0, 0, 0.3);
-  border-radius: 0;
+  border-radius: 50%;
 }
 .pdp-slider.slick-slider .slick-arrow.slick-next::before, .pdp-slider.slick-slider .slick-arrow.slick-prev:before {
   display: none;
@@ -52,16 +52,16 @@
   font-size: 50px;
   /* background-color: rgba(0, 0, 0, 0.3); */
   right: 0;
-  height: 70px;
-  line-height: 70px;
+  height: 50px;
+  line-height: 50px;
 }
 .pdp-slider.slick-slider:hover .slick-arrow.slick-prev:before {
   display: block;
   font-size: 50px;
   /* background-color: rgba(0, 0, 0, 0.3); */
   left: 0;
-  height: 70px;
-  line-height: 70px;
+  height: 50px;
+  line-height: 50px;
 }
 
 /* more collection specific*/
@@ -161,5 +161,7 @@
 }
 
 .more-collection.mobile-slider .slick-arrow {
+  border-radius: 50%;
   top: 30%;
 }
+
