--- a/src/containers/categoryLanding/slick.css
+++ b/src/containers/categoryLanding/slick.css
@@ -93,10 +93,10 @@ background: url('../../images/category/arrow_right.svg') no-repeat;
 } */
 
 .more-collection .slick-slider:hover .slick-arrow.slick-next, .more-collection .slick-slider:hover .slick-arrow.slick-prev {
-  height: 70px;
+  height: 50px;
   width: 50px;
   background: rgba(0, 0, 0, 0.3);
-  border-radius: 0;
+  border-radius: 50%;
 }
 .featured-section.slick-slider .slick-arrow.slick-next::before, .featured-section.slick-slider .slick-arrow.slick-prev:before {
   display: none;
@@ -108,16 +108,16 @@ background: url('../../images/category/arrow_right.svg') no-repeat;
   font-size: 50px;
   /* background-color: rgba(0, 0, 0, 0.3); */
   right: 0;
-  height: 70px;
-  line-height: 70px;
+  height: 50px;
+  line-height: 50px;
 }
 .featured-section.slick-slider:hover .slick-arrow.slick-prev:before {
   display: block;
   font-size: 50px;
   /* background-color: rgba(0, 0, 0, 0.3); */
   left: 0;
-  height: 70px;
-  line-height: 70px;
+  height: 50px;
+  line-height: 50px;
 }
 
 /* more collection specific*/
